@@ -1,3 +1,9 @@
+Development
+-----------
+
+ * Introduction of the :class:`camelot.admin.field_admin.FieldAdmin` class to
+   allow definition of the field attributes within the entity class.
+ 
 Release 13.04.13
 ----------------
 
